- add homework 3.3 based on final project draft