@@ -2,6 +2,7 @@ package aua.testingfundamentals.pom.pages;
 
 import aua.testingfundamentals.pom.base.BasePage;
 import aua.testingfundamentals.pom.locators.SearchLocators;
+import org.openqa.selenium.Keys;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.ui.ExpectedConditions;
@@ -12,22 +13,16 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 public class SearchPage extends BasePage {
-    private WebDriverWait wait;
-    public WebDriver getDriver() {
-        return driver;
-    }
 
-
-    public SearchPage(final WebDriver driver, final WebDriverWait wait) {
+    public SearchPage( WebDriver driver,  WebDriverWait wait) {
         super(driver, wait);
-        this.wait = wait;
     }
-    public void performSearch() {
+    public  void performSearch() {
         WebElement enableSearchField = driver.findElement(SearchLocators.ENABLE_SEARCH_FIELD);
         enableSearchField.click();
     }
 
-    public void enterSearchQuery(String query) {
+    public  void enterSearchQuery(String query) {
         WebElement searchField = driver.findElement(SearchLocators.SEARCH_FIELD);
         searchField.sendKeys(query);
     }
@@ -37,16 +32,18 @@ public class SearchPage extends BasePage {
         return errorMessage.getText();
     }
 
-    Duration timeout = Duration.ofSeconds(10);
-
-
-    public List<String> getSearchResults() {
+    public  List<String> getSearchResults() {
+        Duration timeout = Duration.ofSeconds(20);
         WebDriverWait wait = new WebDriverWait(driver, timeout);
-        wait.until(ExpectedConditions.visibilityOfElementLocated(SearchLocators.SEARCH_RESULTS));
-        List<WebElement> searchResultElements = driver.findElements(SearchLocators.SEARCH_RESULTS);
+        List<WebElement> searchResultElements = wait.until(ExpectedConditions.visibilityOfAllElementsLocatedBy(SearchLocators.SEARCH_RESULTS));
+
         return searchResultElements.stream()
                 .map(WebElement::getText)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public void enter(){
+        driver.switchTo().activeElement().sendKeys(Keys.ENTER);
     }
 
 }
